--- a/src/main/res/layout/fragment_settings.xml
+++ b/src/main/res/layout/fragment_settings.xml
@@ -7,8 +7,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:padding="8dp">
+        android:orientation="vertical">
 
         <Button
             android:id="@+id/loNotifications"
@@ -17,15 +16,11 @@
 
         <include
             android:id="@+id/loPreloadPhoto"
-            layout="@layout/item_edit_form_select"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            layout="@layout/item_edit_form_select"/>
 
         <include
             android:id="@+id/loAccount"
-            layout="@layout/item_edit_form_select"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"/>
+            layout="@layout/item_edit_form_select"/>
 
         <Button
             android:id="@+id/loHelp"
