--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -963,9 +963,18 @@
     </style>
 
     <style name="WhiteButtonWithSeparator" parent="GrayText">
-        <item name="android:background">@drawable/list_like_btn</item>
+        <item name="android:background">@drawable/list_item_btn</item>
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:gravity">center_vertical|start</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:paddingRight">8dp</item>
+    </style>
+
+    <style name="SelectorDialogTitle" parent="GrayText">
+        <item name="android:paddingRight">16dp</item>
+        <item name="android:paddingLeft">16dp</item>
+        <item name="android:paddingTop">22dp</item>
+        <item name="android:paddingBottom">22dp</item>
     </style>
 </resources>
