--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -64,6 +64,7 @@
 
     <style name="Selector" parent="@android:style/Theme.Dialog">
         <item name="android:checkboxStyle">@style/CheckboxLeft</item>
+        <item name="android:background">@color/dialog_bg</item>
     </style>
 
     <style name="CheckboxLeft">
