#36996: change feed ads icon

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -296,11 +296,9 @@
 
     <style name="AdIndicator">
         <item name="android:visibility">visible</item>
-        <item name="android:src">@drawable/ic_ad_flag</item>
+        <item name="android:src">@drawable/ic_arrow_feed_ads</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_alignParentRight">true</item>
-        <item name="android:layout_alignParentTop">true</item>
         <item name="android:layout_marginRight">6dp</item>
     </style>
 
