--- a/src/main/res/layout/item_feed_ad.xml
+++ b/src/main/res/layout/item_feed_ad.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/icon"
-        layout="@layout/item_feed_part_avatar"/>
+        layout="@layout/item_feed_part_avatar" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -21,7 +21,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/ListName.Ad"
-            android:layout_marginRight="20dp" />
+            android:drawableRight="@drawable/ic_arrow_feed_ads"
+            android:drawablePadding="6dp"
+            android:layout_marginRight="10dp" />
 
         <TextView
             android:id="@+id/ad_description"
@@ -33,9 +35,4 @@
             android:layout_marginRight="6dp" />
 
     </RelativeLayout>
-
-    <ImageView
-        android:id="@+id/ivAd"
-        style="@style/AdIndicator" />
-
 </RelativeLayout>
