--- a/src/main/res/layout/layout_retryview.xml
+++ b/src/main/res/layout/layout_retryview.xml
@@ -8,7 +8,10 @@
     android:clickable="true">
 
     <ImageView
+        android:layout_marginTop="-20dp"
         android:layout_width="wrap_content"
+        android:id="@+id/imgError"
+        android:layout_marginBottom="44dp"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_error" />
 
@@ -16,10 +19,9 @@
         android:id="@+id/tvMessage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="44dp"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
         android:textSize="18sp"
         android:textColor="#333333"
         android:gravity="center" />
