--- a/src/main/res/layout/retry_btn.xml
+++ b/src/main/res/layout/retry_btn.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <com.topface.IllustratedTextView.IllustratedTextView xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/FlatButton.Gray"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:minWidth="200dp"
+    android:maxWidth="280dp"
     android:layout_margin="5dp"
     android:paddingLeft="13dp"
     android:paddingRight="13dp"
+    android:singleLine="false"
     android:paddingTop="8dp"
     android:paddingBottom="8dp"
     android:gravity="center" />
