--- a/src/main/res/layout/retry_btn_blue.xml
+++ b/src/main/res/layout/retry_btn_blue.xml
@@ -4,7 +4,9 @@
     style="@style/FlatButton.Blue"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="5dp"
+    android:layout_margin="5dp"
+    android:minWidth="200dp"
+    android:maxWidth="280dp"
     android:paddingLeft="13dp"
     android:paddingRight="13dp"
     android:paddingTop="8dp"
