--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -715,6 +715,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
+        <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="Widget.Topface.Button">
