Dialog style and forms updating mechanic.

--- a/src/main/res/layout/fragment_form.xml
+++ b/src/main/res/layout/fragment_form.xml
@@ -63,7 +63,7 @@
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-        android:divider="@color/profile_divider_color"
+        android:divider="@color/gray_divider"
         android:dividerHeight="1dp"
         android:fadeScrollbars="true"
         android:fadingEdge="none"
