--- a/src/main/res/drawable/list_like_btn_normal.xml
+++ b/src/main/res/drawable/list_like_btn_normal.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:bottom="0dp" android:left="-2dp" android:right="-2dp" android:top="-2dp">
         <shape android:shape="rectangle">
-            <stroke android:color="@color/profile_divider_color" android:width="1dp"/>
+            <stroke android:color="@color/gray_divider" android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
