--- a/src/main/res/drawable/list_like_btn_pressed.xml
+++ b/src/main/res/drawable/list_like_btn_pressed.xml
@@ -3,7 +3,7 @@
     <item android:bottom="0dp" android:left="-2dp" android:right="-2dp" android:top="-2dp">
         <shape android:shape="rectangle">
             <solid android:color="@color/form_selector_color_pressed_state"/>
-            <stroke android:color="@color/profile_divider_color" android:width="1dp"/>
+            <stroke android:color="@color/gray_divider" android:width="1dp"/>
         </shape>
     </item>
 </layer-list>
