--- a/src/main/res/layout/settings_selector_checkbox.xml
+++ b/src/main/res/layout/settings_selector_checkbox.xml
@@ -5,10 +5,10 @@
 
     <CheckBox
         android:id="@+id/selector_check"
-        style="@style/WhiteButtonWithSeparator"
+        style="@style/WhiteListItem"
         android:background="@null"
         android:button="@null"
-        android:drawableLeft="@drawable/settings_checkbox"
+        android:drawableLeft="@drawable/selector_checkbox"
         android:drawablePadding="5dp"
         android:paddingLeft="30dp"
         android:checked="false"/>
