--- a/src/main/res/layout/settings_selector_dialog.xml
+++ b/src/main/res/layout/settings_selector_dialog.xml
@@ -23,7 +23,8 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:divider="@color/profile_divider_color"
+        android:divider="@color/gray_divider"
         android:dividerHeight="1dp"
-        android:layout_below="@id/selector_dialog_title_divider"/>
+        android:layout_below="@id/selector_dialog_title_divider"
+        android:scrollbars="none"/>
 </RelativeLayout>
