--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -962,8 +962,7 @@
         <item name="android:textSize">16sp</item>
     </style>
 
-    <style name="WhiteButtonWithSeparator" parent="GrayText">
-        <item name="android:background">@drawable/list_item_btn</item>
+    <style name="WhiteListItem" parent="GrayText">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:layout_height">60dp</item>
         <item name="android:gravity">center_vertical|start</item>
@@ -971,10 +970,19 @@
         <item name="android:paddingRight">8dp</item>
     </style>
 
+    <style name="WhiteButtonWithSeparator" parent="WhiteListItem">
+        <item name="android:background">@drawable/list_item_btn</item>
+    </style>
+
     <style name="SelectorDialogTitle" parent="GrayText">
         <item name="android:paddingRight">16dp</item>
         <item name="android:paddingLeft">16dp</item>
         <item name="android:paddingTop">22dp</item>
         <item name="android:paddingBottom">22dp</item>
+    </style>
+
+    <style name="SelectorDialogTitle.Blue">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/default_line_indicator_selected_color</item>
     </style>
 </resources>
