--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -62,14 +62,17 @@
         <item name="android:backgroundDimEnabled">false</item>
     </style>
 
-    <style name="Selector" parent="@android:style/Theme.Dialog">
+    <style name="Selector" parent="Theme.Topface">
         <item name="android:checkboxStyle">@style/CheckboxLeft</item>
         <item name="android:background">@color/dialog_bg</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowCloseOnTouchOutside" tools:ignore="NewApi">true</item>
+        <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
     </style>
 
     <style name="CheckboxLeft">
         <item name="android:button">@null</item>
-        <item name="android:drawableLeft">@drawable/settings_checkbox</item>
+        <item name="android:drawableLeft">@drawable/selector_checkbox</item>
         <item name="android:drawablePadding">5dp</item>
         <item name="android:paddingLeft">30dp</item>
     </style>
