--- a/src/main/res/layout/edit_dialog_radiobutton.xml
+++ b/src/main/res/layout/edit_dialog_radiobutton.xml
@@ -3,12 +3,12 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent">
 
-    <CheckBox
-        android:id="@+id/selector_check"
+    <RadioButton
+        android:id="@+id/editor_check"
         style="@style/WhiteListItem"
         android:background="@null"
         android:button="@null"
-        android:drawableLeft="@drawable/selector_checkbox"
+        android:drawableLeft="@drawable/selector_radiobutton"
         android:drawablePadding="5dp"
         android:paddingLeft="30dp"
         android:checked="false"/>
