--- a/src/main/res/layout/edit_dialog.xml
+++ b/src/main/res/layout/edit_dialog.xml
@@ -4,20 +4,20 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/selector_dialog_title"
+        android:id="@+id/edit_dialog_title"
         style="@style/SelectorDialogTitle"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
     <ImageView
-        android:id="@+id/selector_dialog_title_divider"
+        android:id="@+id/edit_dialog_title_divider"
         android:layout_width="fill_parent"
         android:layout_height="1dp"
         android:src="@color/tab_counter_text_color_selected"
-        android:layout_below="@id/selector_dialog_title"/>
+        android:layout_below="@id/edit_dialog_title"/>
 
     <ListView
-        android:id="@+id/optionsList"
+        android:id="@+id/edit_dialog_options_list"
         android:orientation="vertical"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -25,6 +25,7 @@
         android:layout_centerInParent="true"
         android:divider="@color/gray_divider"
         android:dividerHeight="1dp"
-        android:layout_below="@id/selector_dialog_title_divider"
-        android:scrollbars="none"/>
+        android:layout_below="@id/edit_dialog_title_divider"
+        android:scrollbars="none"
+        android:descendantFocusability="afterDescendants"/>
 </RelativeLayout>
