--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -69,6 +69,10 @@
         <item name="android:windowCloseOnTouchOutside" tools:ignore="NewApi">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
     </style>
+    
+    <style name="EditDialog.Text">
+        <item name="android:windowSoftInputMode">stateVisible</item>
+    </style>
 
     <style name="CheckboxLeft">
         <item name="android:button">@null</item>
