--- a/src/main/res/layout/dialog_confirm_email.xml
+++ b/src/main/res/layout/dialog_confirm_email.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:id="@+id/loDialog"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/loDialog"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/tvTitle"
@@ -16,7 +16,7 @@
         android:layout_marginTop="10dp"
         android:textSize="12sp"
         android:textIsSelectable="false"
-        tools:ignore="UnusedAttribute"/>
+        tools:ignore="UnusedAttribute" />
 
     <EditText
         android:id="@+id/edEmail"
@@ -26,7 +26,7 @@
         android:gravity="left"
         android:layout_marginTop="10dp"
         android:padding="10dp"
-        android:textSize="12sp"/>
+        android:textSize="12sp" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -40,7 +40,18 @@
             android:text="@string/send_confirm_link"
             style="@style/Widget.Topface.Button.Big.Blue"
             android:padding="0dp"
-            android:textSize="12sp"/>
+            android:textSize="12sp" />
+
+        <Button
+            android:id="@+id/btnConfirmed"
+            android:layout_width="fill_parent"
+            android:layout_marginTop="10dp"
+            android:layout_below="@id/btnSend"
+            android:layout_height="40dp"
+            android:text="@string/settings_email_was_confirmed"
+            style="@style/Widget.Topface.Button.Big.Gray"
+            android:padding="0dp"
+            android:textSize="12sp" />
 
         <ProgressBar
             android:id="@+id/prsLoading"
@@ -48,7 +59,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:visibility="gone"
-            style="@style/TopFaceProgressBar.Small"/>
+            style="@style/TopFaceProgressBar.Small" />
     </RelativeLayout>
 
 </LinearLayout>
