--- a/src/main/res/layout/fragment_feedback_list.xml
+++ b/src/main/res/layout/fragment_feedback_list.xml
@@ -4,4 +4,5 @@
     android:divider="@drawable/feedback_devider"
     android:dividerHeight="2dp"
     android:layout_height="wrap_content"
-    android:layout_width="wrap_content" />
+    android:layout_width="wrap_content"
+    android:background="@color/bg_white" />
