--- a/src/main/res/layout/fragment_feedback_message.xml
+++ b/src/main/res/layout/fragment_feedback_message.xml
@@ -5,7 +5,7 @@
     android:layout_height="fill_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:background="@color/bg_main">
+    android:background="@color/bg_white">
 
     <ScrollView
         android:layout_width="fill_parent"
