--- a/src/main/res/layout/edit_dialog.xml
+++ b/src/main/res/layout/edit_dialog.xml
@@ -28,4 +28,10 @@
         android:layout_below="@id/edit_dialog_title_divider"
         android:scrollbars="none"
         android:descendantFocusability="afterDescendants"/>
+
+    <ViewStub
+        android:id="@+id/edit_dialog_buttons_stub"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/edit_dialog_options_list"/>
 </RelativeLayout>
