--- a/src/main/res/layout/edit_dialog_text.xml
+++ b/src/main/res/layout/edit_dialog_text.xml
@@ -1,18 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     android:descendantFocusability="afterDescendants">
 
     <EditText
         android:id="@+id/editor_text"
         style="@style/topfaceEditText.Holo"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:inputType="textCapSentences"
-        android:minHeight="34dp">
-
-        <requestFocus/>
-    </EditText>
+        android:layout_margin="15dp"/>
 </FrameLayout>
