--- a/src/main/res/values/colors.xml
+++ b/src/main/res/values/colors.xml
@@ -73,4 +73,6 @@
     <color name="light_theme_color_primary">#03a9f4</color>
     <color name="light_theme_color_primary_dark">#0287c3</color>
     <color name="light_theme_color_accent">#ee4493</color>
+
+    <color name="edit_dialog_buttons_divider">#DCDCDC</color>
 </resources>
