--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -988,7 +988,7 @@
         <item name="android:paddingRight">8dp</item>
     </style>
 
-    <style name="WhiteButtonWithSeparator" parent="WhiteListItem">
+    <style name="WhiteListItem.Underline">
         <item name="android:background">@drawable/list_item_btn</item>
     </style>
 
