--- a/src/main/res/layout/fragment_topface_account.xml
+++ b/src/main/res/layout/fragment_topface_account.xml
@@ -10,108 +10,88 @@
         android:layout_height="fill_parent"
         android:orientation="vertical">
 
-        <ScrollView
+
+        <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="0dp"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:gravity="center_horizontal"
+            android:orientation="vertical">
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/fieldContainer_layout"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:gravity="center_horizontal"
-                android:orientation="vertical">
-
-                <RelativeLayout
-                    android:id="@+id/fieldContainer_layout"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="18dp"
-                    android:layout_marginTop="18dp"
-                    android:gravity="center">
-
-                    <EditText
-                        android:id="@+id/edText"
-                        style="@style/SettingsAccountEditText"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/tvText"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:drawablePadding="5dp"
-                        android:gravity="center"
-                        android:padding="4dp"
-                        android:singleLine="true"
-                        android:textColor="#333333"
-                        android:textSize="16sp" />
-                </RelativeLayout>
-
-                <Button
-                    style="@style/FlatButton.Blue"
-                    android:id="@+id/btnChange"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/change_password"
-                    android:visibility="gone" />
-
-                <Button
-                    style="@style/FlatButton.Gray"
-                    android:id="@+id/btnChangeEmail"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/change_email"
-                    android:visibility="visible" />
-
-                <Button
-                    style="@style/FlatButton.Gray"
-                    android:id="@+id/btnLogout"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/settings_logout"
-                    android:visibility="visible" />
+                android:layout_marginBottom="18dp"
+                android:layout_marginTop="18dp"
+                android:gravity="center">
 
                 <EditText
-                    android:id="@+id/edCodeConfirmation"
+                    android:id="@+id/edText"
                     style="@style/SettingsAccountEditText"
-                    android:layout_marginBottom="16dp"
-                    android:layout_marginTop="19dp"
-                    android:hint="@string/settings_code_confirmation_hint"
-                    android:visibility="gone" />
-
-                <Button
-                    style="@style/FlatButton.Gray"
-                    android:id="@+id/btnCodeSend"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/settings_code_confirmation"
-                    android:visibility="gone" />
-
-                <Button
-                    style="@style/FlatButton.Gray"
-                    android:id="@+id/btnCodeWasSend"
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:text="@string/settings_email_was_confirmed"
                     android:visibility="gone" />
 
                 <TextView
-                    android:id="@+id/txtCodeWasSend"
-                    android:layout_width="fill_parent"
+                    android:id="@+id/tvText"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:drawablePadding="5dp"
                     android:gravity="center"
-                    android:paddingTop="6dp"
-                    android:text="@string/settings_email_was_confirmed_textview_text"
-                    android:textColor="#959595"
-                    android:textSize="12sp"
-                    android:visibility="gone" />
+                    android:padding="4dp"
+                    android:singleLine="true"
+                    android:textColor="#333333"
+                    android:textSize="16sp" />
+            </RelativeLayout>
 
-            </LinearLayout>
-        </ScrollView>
+            <Button
+                style="@style/FlatButton.Blue"
+                android:id="@+id/btnChange"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/change_password"
+                android:visibility="gone" />
+
+            <Button
+                style="@style/FlatButton.Gray"
+                android:id="@+id/btnChangeEmail"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/change_email"
+                android:visibility="gone" />
+
+            <Button
+                style="@style/FlatButton.Gray"
+                android:id="@+id/btnLogout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/settings_logout"
+                android:visibility="visible" />
+
+            <Button
+                style="@style/FlatButton.Gray"
+                android:id="@+id/btnCodeWasSend"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="@string/settings_email_was_confirmed"
+                android:visibility="gone" />
+
+            <TextView
+                android:id="@+id/txtCodeWasSend"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:paddingTop="6dp"
+                android:text="@string/settings_email_was_confirmed_textview_text"
+                android:textColor="#959595"
+                android:textSize="12sp"
+                android:visibility="gone" />
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/btnDeleteAccount"
