improve theme for nav activ

--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -67,7 +67,7 @@
         <item name="android:autoCompleteTextViewStyle">@style/AutoCompleteTextViewStyle</item>
     </style>
 
-    <style name="Theme.Topface.ActionbarOverlay">
+    <style name="Theme.Topface.ActionbarOverlay" parent="Theme.Topface">
         <item name="windowActionBarOverlay">true</item>
         <item name="android:windowActionBarOverlay" tools:ignore="NewApi">true</item>
     </style>
