--- a/src/main/res/layout/fragment_feedback_list.xml
+++ b/src/main/res/layout/fragment_feedback_list.xml
@@ -2,7 +2,8 @@
 <ListView xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/feedback_list"
     android:divider="@drawable/feedback_devider"
-    android:dividerHeight="2dp"
+    android:dividerHeight="1dp"
+    android:listSelector="@null"
     android:layout_height="wrap_content"
     android:layout_width="wrap_content"
     android:background="@color/bg_white" />
