new white design for empty lists

--- a/src/main/res/layout/layout_empty_admirations.xml
+++ b/src/main/res/layout/layout_empty_admirations.xml
@@ -4,7 +4,8 @@
              android:id="@+id/vfEmptyViews"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
-             android:clickable="true">
+             android:clickable="true"
+    android:background="#FFF">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -20,35 +21,43 @@
             android:gravity="center"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            />
+            android:fontFamily="Roboto Light"
+            android:textColor="#333333"
+            android:textSize="17sp" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/tvText"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="17dp"
+            android:layout_marginTop="24dp"
             android:orientation="horizontal"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
+            android:layout_marginRight="8dp"
+            android:minWidth="240dp"
+            android:minHeight="44dp">
 
             <Button
                 android:id="@+id/btnStartRate"
                 android:layout_width="0dip"
                 android:layout_weight="1"
-                android:layout_height="wrap_content"
+                android:layout_height="44dp"
                 android:text="@string/buy_resources"
                 style="@style/Widget.Topface.Button.Big.Blue"
-                android:minWidth="210dp"/>
+                android:minWidth="240dp"
+                android:textSize="18sp"
+                android:textColor="#FFF"
+                android:fontFamily="Roboto Regular" />
         </LinearLayout>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/background_admiration"
+            android:src="@drawable/ic_admiration"
             android:layout_above="@id/tvText"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="18dp"/>
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="40dp" />
 
     </RelativeLayout>
 
