--- a/src/main/res/layout/layout_empty_dialogs.xml
+++ b/src/main/res/layout/layout_empty_dialogs.xml
@@ -3,7 +3,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
-                android:clickable="true">
+                android:clickable="true"
+    android:background="#FFF">
 
     <TextView
         android:id="@+id/tvText"
@@ -11,51 +12,68 @@
         android:layout_height="wrap_content"
         android:text="@string/nobody_chat_with_you_sympathies_will_help"
         style="@style/ListItemEmptyText"
-        android:layout_centerInParent="true"
         android:gravity="center"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
+        android:textColor="#ff333333"
+        android:textSize="17sp"
+        android:lineSpacingExtra="20sp"
+        android:fontFamily="Roboto Light"
+        android:elegantTextHeight="false"
+        android:layout_centerVertical="true"
+        android:layout_alignLeft="@+id/linearLayout"
+        android:layout_alignStart="@+id/linearLayout"
+        android:layout_alignRight="@+id/linearLayout"
+        android:layout_alignEnd="@+id/linearLayout" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvText"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
-        android:orientation="horizontal"
+        android:layout_marginTop="24dp"
+        android:orientation="vertical"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
-
-        <Button
-            android:id="@+id/btnStartRate"
-            android:layout_width="0dip"
-            android:layout_weight="1"
-            android:layout_height="wrap_content"
-            android:text="@string/general_get_dating"
-            style="@style/Widget.Topface.Button.Big.Gray"
-            android:layout_marginRight="3dp"
-            android:singleLine="true"
-            android:minWidth="210dp"/>
+        android:layout_marginRight="8dp"
+        android:background="#FFF"
+        android:id="@+id/linearLayout">
 
         <Button
             android:id="@+id/btnBuyVip"
-            android:layout_width="0dip"
+            android:layout_width="240dp"
             android:layout_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="44dp"
             android:text="@string/buy_resources"
             style="@style/Widget.Topface.Button.Big.Blue"
-            android:layout_marginLeft="3dp"
             android:singleLine="true"
-            android:minWidth="210dp"/>
+            android:minWidth="240dp"
+            android:fontFamily="Roboto Regular"
+            android:textColor="#FFF"
+            android:textSize="18sp" />/>
+
+        <Button
+            android:id="@+id/btnStartRate"
+            android:layout_width="240dp"
+            android:layout_weight="1"
+            android:layout_height="44dp"
+            android:text="@string/general_get_dating"
+            style="@style/Widget.Topface.Button.Big.Gray"
+            android:singleLine="true"
+            android:minWidth="240dp"
+            android:fontFamily="Roboto Regular"
+            android:layout_marginTop="12dp"
+            android:textColor="#FFF"
+            android:textSize="18sp" />
+
+
 
     </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/chat"
+        android:src="@drawable/ic_msg"
         android:layout_above="@id/tvText"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="18dp"/>
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="40dp" />
 
 </RelativeLayout>
