--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -5,13 +5,15 @@
               android:layout_height="fill_parent"
               android:gravity="center"
               android:orientation="vertical"
-              android:clickable="true">
+              android:clickable="true"
+    android:background="#FFF">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/fans"
-        android:layout_marginBottom="18dp"/>
+        android:src="@drawable/ic_guitar"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="40dp" />
 
     <TextView
         android:id="@+id/tvText"
@@ -21,7 +23,13 @@
         style="@style/ListItemEmptyText"
         android:gravity="center"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
+        android:layout_marginRight="16dp"
+        android:fontFamily="Roboto Light"
+        android:textColor="#333333"
+        android:textSize="17sp"
+        android:lineSpacingExtra="20sp"
+        android:minWidth="240dp"
+        android:maxWidth="240dp" />
 
     <Button
         android:id="@+id/btnBuyVip"
@@ -29,7 +37,11 @@
         android:layout_height="wrap_content"
         android:text="@string/buying_vip_status"
         style="@style/Widget.Topface.Button.Big.Blue"
-        android:layout_marginTop="17dp"
-        android:singleLine="true"/>
+        android:layout_marginTop="24dp"
+        android:singleLine="true"
+        android:textColor="#FFF"
+        android:textSize="18sp"
+        android:minWidth="240dp"
+        android:minHeight="44dp" />
 
 </LinearLayout>
