--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -449,6 +449,13 @@
         <item name="android:gravity">center_horizontal</item>
     </style>
 
+    <style name="Gift.Strip">
+        <item name="android:layout_width">@dimen/form_gift_size</item>
+        <item name="android:layout_height">@dimen/form_gift_size</item>
+        <item name="android:padding">0dp</item>
+        <item name="android:layout_margin">0dp</item>
+    </style>
+
     <style name="AlbumGift" parent="Gift">
         <item name="postProcessor">rounded</item>
     </style>
