--- a/src/main/res/layout/layout_empty_bookmarks.xml
+++ b/src/main/res/layout/layout_empty_bookmarks.xml
@@ -4,8 +4,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:clickable="true"
-                android:orientation="vertical"
-    android:background="#FFF">
+                android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -22,12 +21,7 @@
         android:layout_width="240dp"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
         android:gravity="center"
-        android:lineSpacingExtra="20sp"
-        android:text="@string/add_bookmarks_to_be_connected"
-        android:textColor="#333333"
-        android:textSize="17sp" />
+        android:text="@string/add_bookmarks_to_be_connected" />
 
 </RelativeLayout>
