--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -302,9 +302,13 @@
     </style>
 
     <style name="ListItemEmptyText">
-        <item name="android:textColor">@color/list_text_gray</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/text_color_gray</item>
+        <item name="android:textSize">17sp</item>
         <item name="android:textStyle">normal</item>
+        <item name="android:lineSpacingExtra">20sp</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+        <item name="android:fontFamily">Roboto Light</item>
     </style>
 
     <style name="ListItemEmptyText.Bold">
@@ -714,7 +718,7 @@
         <item name="android:paddingRight">15dp</item>
         <item name="android:paddingTop">10dp</item>
         <item name="android:paddingBottom">10dp</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">false</item>
@@ -731,16 +735,22 @@
         <item name="android:gravity">center</item>
     </style>
 
+    <style name="Widget.Topface.Button.Big.ForEmptyList">
+        <item name="android:minHeight">44dp</item>
+        <item name="android:minWidth">240dp</item>
+        <item name="android:fontFamily">Roboto Regular</item>
+    </style>
+
     // наследуются стили Widget
 
     <style name="Widget.Topface" />
 
-    <style name="Widget.Topface.Button.Big.Gray" parent="Widget.Topface.Button.Big">
+    <style name="Widget.Topface.Button.Big.Gray" parent="Widget.Topface.Button.Big.ForEmptyList">
         <item name="android:background">@drawable/btn_gray_selector</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
 
-    <style name="Widget.Topface.Button.Big.Blue" parent="Widget.Topface.Button.Big">
+    <style name="Widget.Topface.Button.Big.Blue" parent="Widget.Topface.Button.Big.ForEmptyList">
         <item name="android:background">@drawable/btn_blue_selector</item>
         <item name="android:textColor">#FFFFFF</item>
     </style>
