--- a/src/main/res/layout/layout_empty_admirations.xml
+++ b/src/main/res/layout/layout_empty_admirations.xml
@@ -35,7 +35,7 @@
                 android:layout_weight="1"
                 android:layout_height="44dp"
                 android:text="@string/buy_resources"
-                style="@style/Widget.Topface.Button.Big.Blue" />
+                style="@style/FlatButton.Blue" />
         </LinearLayout>
 
         <ImageView
@@ -107,7 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/buying_vip_status"
-            style="@style/Widget.Topface.Button.Big.Blue"
+            style="@style/FlatButton.Blue"
             android:minWidth="210dp"
             android:layout_marginTop="16dp"/>
 
