--- a/src/main/res/layout/layout_empty_dialogs.xml
+++ b/src/main/res/layout/layout_empty_dialogs.xml
@@ -32,7 +32,7 @@
             android:layout_weight="1"
             android:layout_height="44dp"
             android:text="@string/buy_resources"
-            style="@style/Widget.Topface.Button.Big.Blue"
+            style="@style/FlatButton.Blue"
             android:singleLine="true" />
 
         <Button
@@ -41,7 +41,7 @@
             android:layout_weight="1"
             android:layout_height="44dp"
             android:text="@string/general_get_dating"
-            style="@style/Widget.Topface.Button.Big.Gray"
+            style="@style/FlatButton.Gray"
             android:singleLine="true"
             android:layout_marginTop="12dp" />
 
