--- a/src/main/res/layout/layout_empty_fans.xml
+++ b/src/main/res/layout/layout_empty_fans.xml
@@ -27,7 +27,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/buying_vip_status"
-        style="@style/Widget.Topface.Button.Big.Blue"
+        style="@style/FlatButton.Blue"
         android:layout_marginTop="24dp"
         android:singleLine="true" />
 
