--- a/src/main/res/layout/form_gifts.xml
+++ b/src/main/res/layout/form_gifts.xml
@@ -7,4 +7,5 @@
     android:layout_marginTop="16dp"
     android:layout_marginBottom="16dp"
     android:layout_marginLeft="4dp"
-    android:layout_marginRight="4dp" />
+    android:layout_marginRight="4dp"
+    android:gravity="center_vertical"/>
