#37516: change tabs, buttons, textview

--- a/src/main/res/layout/fragment_buy_editor.xml
+++ b/src/main/res/layout/fragment_buy_editor.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
     android:layout_width="match_parent">
 
     <include
+        android:layout_marginTop="10dp"
         android:id="@+id/EditorTestBuyCheckBox"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
