--- a/src/main/res/layout/actionbar_container_title_view.xml
+++ b/src/main/res/layout/actionbar_container_title_view.xml
@@ -53,24 +53,25 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
-        android:layout_marginRight="10dp"
+        android:layout_marginRight="8dp"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/coins_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
+            android:drawablePadding="6dp"
+            android:paddingRight="14dp"
             android:drawableRight="@drawable/ic_coins"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
         <TextView
             android:id="@+id/likes_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:drawablePadding="5dp"
-            android:drawableRight="@drawable/ic_sympathy_small"
-            android:textSize="20sp" />
+            android:drawablePadding="6dp"
+            android:drawableRight="@drawable/ic_heart_small"
+            android:textSize="24sp" />
     </LinearLayout>
 </RelativeLayout>
