--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -27,7 +27,7 @@
         <item name="android:typeface">sans</item>
         <!-- Цвет ссылок (для TextView свойства autoLink)  -->
         <!-- Убирает капс на Lollipop, нужен только для >5.0  -->
-        <item name="android:textAllCaps">false</item>
+        <item name="android:textAllCaps" tools:ignore="NewApi">false</item>
         <item name="android:textColorLink">#2371B9</item>
         <item name="android:editTextStyle">@style/topfaceEditText</item>
         <item name="android:autoCompleteTextViewStyle">@style/topfaceAutoCompleteEditText</item>
@@ -69,7 +69,7 @@
         <item name="android:windowCloseOnTouchOutside" tools:ignore="NewApi">true</item>
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
     </style>
-    
+
     <style name="EditDialog.Text">
         <item name="android:windowSoftInputMode">stateVisible</item>
     </style>
